# project-CURRENNT-public

./: .gitignore  README
CURRENNT_codes/: BUGS  CMakeLists.txt  CMakeLists.txt_template  INSTALL  README  __LOG  changelog.txt  cmake_install.cmake  currennt.sln
CURRENNT_codes/currennt/: currennt.vcxproj  currennt.vcxproj.filters  netcdf.lib
CURRENNT_codes/currennt/src/: dustbin.txt  dustbin.txt~  main.cpp  main.cpp~
CURRENNT_codes/currennt_lib/: currennt_lib.vcxproj  currennt_lib.vcxproj.filters
CURRENNT_codes/currennt_lib/src/: Configuration.cpp  Configuration.hpp  LayerFactory.cu  LayerFactory.hpp  MacroDefine.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Types.hpp  __LOG  temp
CURRENNT_codes/currennt_lib/src/activation_functions/: Identity.cuh  Logistic.cuh  Max2min0.cuh  Maxmin1.cuh  Maxmin2.cuh  Relu.cuh  Tanh.cuh
CURRENNT_codes/currennt_lib/src/data_sets/: DataSet.cpp  DataSet.hpp  DataSetFraction.cpp  DataSetFraction.hpp
CURRENNT_codes/currennt_lib/src/helpers/: FFTMat.cu  FFTMat.hpp  JsonClasses.cpp  JsonClasses.hpp  JsonClassesForward.hpp  Matrix.cu  Matrix.hpp  NumericLimits.cuh  TypedMath.cuh  beamSearcher.cpp  beamSearcher.hpp  boundRange.cuh  cublas.cu  cublas.hpp  dataProcess.cu  dataProcess.hpp  max.cuh  (+15 more)
CURRENNT_codes/doc/: Doxyfile
CURRENNT_codes/examples/f0tune/: 001_RUN.pl  01_prepare_train_data.pl  config.pm  trained_network.jsn.we
CURRENNT_codes/sandbox/: act_maj_vote.pl  add_layer.pl  average_weights.pl
CURRENNT_codes/scripts/: README  discriminative_pretraining.pl
CURRENNT_codes/tests/test1/: config.cfg  expected_network.jsn  run.py
CURRENNT_codes/tool_scripts/: convert_autosave_to_jsn.sh  plot_network_graph.sh
CURRENNT_codes/tools/: README  compile.sh  htk2nc.cpp  nc-standardize.cpp
(+509 files in other folders)
